fixing logo container dimension to prevent header from being too narrow

--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -113,6 +113,7 @@ div.top {
                 width: 100px;
                 height: 63px;
                 background: url(/static/assets/img/mexionario-200x126.png);
+                background-repeat: no-repeat;
                 background-size: 100px 63px;
                 text-indent: 100%;
                 white-space: nowrap;
