--- a/client/src/css/main-en-US.scss
+++ b/client/src/css/main-en-US.scss
@@ -5,6 +5,7 @@ div.top header.TopBar nav.NavBar h2.home a {
     width: 100px;
     min-height: 63px;
     background: url(/static/assets/img/slangsco-201x56.png);
+    background-repeat: no-repeat;
     background-size: 100px 28px;
     text-indent: 100%;
     white-space: nowrap;
